--- a/compass_admin/public/index.html
+++ b/compass_admin/public/index.html
@@ -9,6 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+     <!-- Open Graph Tags -->
+     <meta property="og:title" content="ComPass" />
+     <meta property="og:description" content="A brief description of your site, such as its features or purpose." />
+     <meta property="og:image" content="%PUBLIC_URL%/logo2.png" /> 
+     <meta property="og:url" content="https://compass-santrans.online" /> 
+     <meta property="og:type" content="website" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
