--- a/compass_admin/public/index.html
+++ b/compass_admin/public/index.html
@@ -7,15 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bus Tracking and Cashless Payments for Santrans"
     />
 
-     <!-- Open Graph Tags -->
-     <meta property="og:title" content="ComPass" />
-     <meta property="og:description" content="A brief description of your site, such as its features or purpose." />
-     <meta property="og:image" content="%PUBLIC_URL%/logo2.png" /> 
-     <meta property="og:url" content="https://compass-santrans.online" /> 
-     <meta property="og:type" content="website" />
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="ComPass" />
+    <meta property="og:description" content="Bus Tracking and Cashless Payments for Santrans" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo2.png" /> 
+    <meta property="og:url" content="https://www.compass-santrans.online" /> 
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.compass-santrans.online/" />
+    <meta property="twitter:title" content="ComPass" />
+    <meta property="twitter:description" content="Bus Tracking and Cashless Payments for Santrans" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo2.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
